# palisade

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  cargow  run-lazytest  run-loadtest  test  test.sh
.gitea/workflows/: pipeline.yaml
.github/workflows/: pipeline.yaml
lazytest/: Cargo.toml  README.md
lazytest/src/: evfs_backup_tests.rs  evfs_crypto_tests.rs  evfs_keyring_tests.rs  evfs_raft_perf_tests.rs  evfs_raft_tests.rs  evfs_vfs_tests.rs  helpers.rs  main.rs  sec_tests.rs  shim_tests.rs  sqlevfs_perf_tests.rs  sqlsec_perf_tests.rs  sqlshim_perf_tests.rs
loadtest/: Cargo.toml  README.md
loadtest/src/: main.rs
sqlevfs/: Cargo.toml  README.md  TODO.md  build.rs
sqlevfs/proto/: raft.proto
sqlevfs/src/: backup.rs  io.rs  keyring.rs  lib.rs  policy.rs  raft_hooks.rs  vfs.rs
sqlevfs/src/crypto/: envelope.rs  keys.rs  page.rs
sqlevfs/src/kms/: cloud.rs  local.rs
sqlevfs/src/vfs/: crypt.rs  mod.rs
sqlevfs/src/vfs/consensus/: NOTES.md  handle.rs  mod.rs  network.rs  replay.rs  rpc.rs  wal.rs
sqlevfs/tests/: integration_test.rs
sqlevfs/tests/integration/: backup.rs  builder.rs  common.rs  crypto.rs  evfs_vfs.rs  init.rs  keyring.rs  raft.rs
sqlsec/: README.md
sqlshim/: Cargo.toml  README.md
sqlshim/src/: ffi.rs  lib.rs  parser.rs  rewriter.rs  statement.rs
src/: authorizer.rs  context.rs  init.rs  label.rs  lib.rs  register.rs  views.rs
src/views/: write_triggers.rs
tests/: integration.rs
tests/cases/: column_security.sql  contexts.sql  hidden_columns.sql  insert_through_view.sql  multi_attr.sql  row_security.sql  stale_view.sql  table_security.sql  update_delete_through_view.sql
tests/expected/: column_security.out  contexts.out  hidden_columns.err  insert_through_view.err  label_forgery.err  row_security.out  (+3 more)
(+25 files in other folders)
