[package]
name = "sqlevfs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
libsqlite3-sys = { version = "0.36", features = [] }
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
getrandom = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"
anyhow = "1"
base64 = "0.22"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
parking_lot = "0.12"
libc = "0.2"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
openraft = { version = "0.9", features = ["serde"] }
futures = "0.3"
rusqlite = { version = "0.38", optional = true }

[build-dependencies]
pkg-config = "0.3"
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
rusqlite = "0.38"
test-log = "0.2"
env_logger = "*"

[features]
default = ["rusqlite"]
rusqlite = ["dep:rusqlite"]